--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -35,10 +35,19 @@
   },
   "turnPlayer": {
     "title": "Spieler | Spieler {player}",
-    "makeTurn": "Führe deinen Zug aus."
+    "makeTurn": "Führe deinen Zug aus.",
+    "playerStatus": {
+      "turn": "Zug {round}-{turn}",
+      "majorities": "Luna Mehrheiten"
+    }
   },
   "turnBot": {
-    "title": "Luna | Luna {bot}"
+    "title": "Luna | Luna {bot}",
+    "botStatus": {
+      "turn": "Zug {round}-{turn}",
+      "helium": "Helium",
+      "research": "Forschung"
+    }
   },
   "endOfRound": {
     "title": "Ende der Runde {round}"
@@ -56,6 +65,12 @@
     "6": "Level 6 - Fortgeschritten",
     "7": "Level 7 - Fortgeschritten",
     "8": "Level 8 - Fortgeschritten"
+  },
+  "resource": {
+    "titanium": "Titan",
+    "carbon": "Kohlenstoff",
+    "energy": "Energie",
+    "minerals": "Mineralien"
   },
   "notfound": {
     "title": "Nicht Gefunden"
