claim start player

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -43,7 +43,8 @@
       "titanium": "Titan",
       "carbon": "Kohlenstoff",
       "energy": "Energie",
-      "minerals": "Mineralien"  
+      "minerals": "Mineralien",
+      "claimFirstPlayer": "Startspieler<br/>beanspruchen"
     }
   },
   "turnBot": {
