--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -31,8 +31,8 @@
     "playerToken": "Le <b>player token</b> avec la couleur de l'automate.",
     "coinsBonusMarkers": "<b>1 CrypCoin</b> and <b>all 5 Bonus Markers</b>.",
     "trackMarkers": "Take the <b>4 track markers</b> and add one to space 0 of each company track.",
-    "startingBonus": "Prends une des tuiles <b>starting research tokens</b> au hasard and apply its starting bonus to the track markers. Then return that starting research token to the game box.",
-    "finalNotes": "The bot does not need a player board, the app will manage the Automa cards and automatically count the helium and research levels. Also leave all starting action cards of the bot's player color and any spare single energy cards in the game box."
+    "startingBonus": "Prends une des tuiles <b>starting research tokens</b> au hasard et applique son effet sur la piste de la compagnie désignée. Retourne le jeton de départ dans la boite de jeu",
+    "finalNotes": "Luna n'a pas besoin d'un plateu joueur, the app will manage the Automa cards and automatically count the helium and research levels. Also leave all starting action cards of the bot's player color and any spare single energy cards in the game box."
   },
   "turnPlayer": {
     "title": "Player | Player {player}",
@@ -48,23 +48,23 @@
       "claimFirstPlayer": "Claim First Player"
     },
     "pass":{
-      "title": "Pass: Drop out of Action phase",
-      "step1": "Turn the face-down cards of your action area face up.",
-      "step2": "Pick up <b>exactly 1</b> of your resting decks.",
+      "title": "Passer: Abandon de la phase d'action",
+      "step1": "Tourné les cartes retournées pour qu'elles soient de nouveaux visibles",
+      "step2": "Choisis <b>exactly 1</b> pile de défausse",
       "step3": "Then, clean up your action area by moving each card in your action slots to a <b>different</b> resting slot of your choice.",
-      "step4": "Finally, return any bonus tiles in your action area."
+      "step4": "Enfin retourne les tuiles bonus vers le plateau"
     }
   },
   "turnBot": {
     "title": "Luna | Luna {bot}",
     "botStatus": {
-      "turn": "Turn {round}-{turn}",
+      "turn": "Tour {round}-{turn}",
       "helium": "Helium",
       "research": "Research",
       "slot": "Slot {slot}"
     },
     "action": {
-      "lunaGains": "Luna gains:",
+      "lunaGains": "Luna gagne:",
       "advanceCompany": {
         "most-valuable": "on the <b>most valuable</b> company track",
         "most-valuable-two-each": "on each of the <b>2 most valuable</b> company tracks",
@@ -88,21 +88,21 @@
         }
       },
       "discardResearchPlan": {
-        "discard": "Luna discards a <b>{plan}-research plan</b>:",
-        "discardFirstCol": "Luna discards a <b>{plan}-research plan</b>; she also gains any CrypCoin on the supplement space:",
-        "discardSpecial": "Luna discards the <b>latest face-up special research plan</b>.",
+        "discard": "Luna défausse <b>{plan}-research plan</b>:",
+        "discardFirstCol": "Luna défausse un <b>{plan}-research plan</b>; Luna gagne le CrypCoin sur la case de prime",
+        "discardSpecial": "Luna défausse le <b>latest face-up special research plan</b>.",
         "help": {
-          "title": "Discard Research Plan",
+          "title": "Défausse un jeton de recherche",
           "instruction": "Whenever an action lets me discard research plans, remove the designated plans in the research display from the game. Afterwards, fill each of the now empty lettered spaces in the research display as usual.",
           "specialResearchPlan": "Whenever I discard the latest face-up <b>special research plan</b> it means: Of the face-up special research plans on the round track, discard the one that was revealed last. If there is none, don’t discard any."
         }
       },
       "expandCompany": {
-        "expand": "Then she expands that company:",
+        "expand": "Alors elle étend cette compagnie",
         "min": "MIN",
         "max": "MAX",
         "help": {
-          "title": "Expand Company",
+          "title": "Extension de la compagnie",
           "instruction": "Whenever an action lets me expand a company, its card states how many expansion points must be used to expand which company. This is done differently depending on which side of the board you’re playing on <i>(see below)</i>.",
           "rulesHint": "Important pre-notes:",
           "hint1": "For reasons of clarity, one of the columns in each station is considered the current <b>main outpost column</b>, which is defined as follows: It is the column for outposts that has the most vacant home spaces but whose final home space (which shows 2 coin icons) is not vacant. Only if the final home spaces of all columns are vacant, it is instead the one with the most vacant home spaces that also shows the fewest coin icons. Any ties are broken in favor of the column that is closer to its company logo on the board.",
@@ -118,7 +118,7 @@
             "hint5": "If none of the reachable sectors is vacant, choose from them the sector with the lowest (MIN) / highest (MAX) sector number that contains an outpost of the reachable company on whose track I’m farthest behind. As usual, oust the existing outpost back to its station, placing it on the lowest vacant home space of its main outpost column."
           },
           "belt": {
-            "title": "Belt side",
+            "title": "Coté ceinture d'astéroides",
             "rulesHint": "For each expansion point, place 1 outpost/shuttle from the station of the expanding company on a Belt space as follows:",
             "hint1": "First, determine the next <b>vacant</b> target within reach of the expanding company. That target must be either a vacant shuttle space or an asteroid where the expanding company has no outpost yet and that has at least one vacant outpost space.",
             "hint2": "From these, choose the one with the lowest target number if the expansion point symbol shows a MIN. If it shows a MAX, choose the one with the highest target number.",
@@ -135,7 +135,7 @@
         "help": {
           "title": "Gain Cards",
           "instruction": "Whenever an action lets me gain cards, take the designated card(s) from the card display and place them in a face-down stack in my reserve.",
-          "hint1": "Gaining cards costs me nothing.",
+          "hint1": "Acheter des cartes ne me coute rien.",
           "hint2": "I don’t gain a card if its designated space is empty.",
           "hint3": "The collected action cards remain in my reserve until the Final scoring phase.",
           "hint4": "Whenever I gain the card with the <b>most valuable share</b> it means: Give me the card that shows an additional share of the company, which - among the ones displayed - belongs to the most valuable company. If there are multiple cards of that company, give me the one from the space with the lowest number. If there is no card with a share in the display, I don’t gain a card."
@@ -143,14 +143,14 @@
       },
       "gainCoin": {
         "help": {
-          "title": "Gain CrypCoin",
-          "instruction": "Add this many CrypCoin from the bank to my reserve."
+          "title": "Gagne CrypCoin",
+          "instruction": "Ajoute cette somme de CrypCoin depuis la banque vers ma réserve"
         }
       },
       "placeBonusMarker": {
-        "place": "Luna places a bonus marker:",
+        "place": "Luna place un pion bonus:",
         "help": {
-          "title": "Place Bonus Marker",
+          "title": "Place un pion bonus",
           "instruction": "Whenever an action lets me place a bonus marker, do the following for me: Take a bonus marker from my reserve and place it onto the bonus space designated by the card.",
           "hint1": "Placing the bonus marker costs me nothing nor does it give me any reward.",
           "hint2": "If the bonus space is already occupied, the bonus marker is not placed."
@@ -159,9 +159,9 @@
     }
   },
   "endOfRound": {
-    "title": "Prepare Round {round}",
-    "flipSpecialResearchTile": "Flip the next special research plan face up",
-    "returnBonusMarkers": "Return the bonus markers to the players (including possible bonus tiles)",
+    "title": "Preparation de la manche {round}",
+    "flipSpecialResearchTile": "Retoune le jeton de recherche spécial",
+    "returnBonusMarkers": "Chaque joueurs reprend ses jetons bonus (et aussi les éventuelles tuiles bonus)",
     "fillUpCardDisplay": "Fill up the card display",
     "planningPhase": "Carry out the planning phase"
   },
@@ -169,10 +169,10 @@
     "title": "End of Game",
     "introduction": "Count the company shares of each player and Luna. Don't forget to count any additional shares on action cards.",
     "scoring": {
-      "companyValueTitle": "Company Values",
-      "scoringTitle": "Scoring",
-      "shareValue": "Share Value",
-      "shareCount": "Share Count",
+      "companyValueTitle": "Valeur de la compagnie",
+      "scoringTitle": "Scores",
+      "shareValue": "Valeur de la part",
+      "shareCount": "Nombre de parts",
       "crypCoin": "CrypCoin",
       "heliumCoin": "Helium CrypCoin",
       "researchCoin": "Research CrypCoin",
@@ -181,7 +181,7 @@
   },
   "standaloneScoring": {
     "title": "Skymines Scoring",
-    "introduction": "Count the company shares of each player. Don't forget to count any additional shares on action cards."
+    "introduction": "Compte les parts de compagnie de chaque joueurs. N'oublie pas les parts sur les cartes achetées"
   },
   "difficultyLevel": {
     "0": "Level 0 - Facile",
